# MeetMind

./: .dockerignore  .gitignore  README.md  config.py  diarization.py  docker-compose.yml
ai-pipeline/: pyproject.toml  requirements-real-bertscore.txt  requirements-real-diarization.txt  requirements.txt
ai-pipeline/meetmind_ai/: __init__.py  action_items.py  config.py  diarization.py  mcq_pipeline.py  mock.py  pipeline.py  preprocessing.py  quiz_generation.py  rag.py  real_bertscore.py  real_diarization.py  schemas.py  summarization.py  transcription.py
ai-pipeline/scripts/: calibrate_noise_threshold.py  measure_retrieval_latency.py
ai-pipeline/tests/: test_mcq_pipeline.py  test_pipeline_mock.py  test_real_backends.py
backend/: .env.example  Dockerfile  requirements.txt
backend/app/: auth.py  config.py  database.py  main.py  models.py  rate_limit.py  schemas.py
backend/app/routers/: auth.py  documents.py  rooms.py  sessions.py  websocket.py
backend/app/services/: pipeline_service.py  pubsub.py  retention.py  room_manager.py  rooms.py  storage_service.py  ws_manager.py
backend/tests/: conftest.py  test_api.py  test_room_manager_redis.py  test_rooms.py
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: ActionItemsPanel.tsx  AudioPlayer.tsx  DocumentPanel.tsx  LiveMeetingForm.tsx  Navbar.tsx  ParticipantList.tsx  ProcessingStages.tsx  QuizPanel.tsx  RoleSummaryPanel.tsx  (+6 more)
server/: main.py
supabase/migrations/: 0001_rooms.sql
tasks/: TASKS.md
(+16 files in other folders)
